# microbial_thermodynamics

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  differential_equations2.py  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
microbial_thermodynamics/: cell_growth_ODE.py  differential_equations2.py  scipy_demo.py
tests/: test_cell_growth_ODE.py  test_differential_equations2.py  test_scipy_demo.py
