[tool.poetry]
name = "microbial-thermodynamics"
version = "0.1.0"
description = ""
authors = ["Jacob Cook <jc2017@ic.ac.uk>"]
readme = "README.md"
packages = [{include = "microbial_thermodynamics"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mypy = "^0.10.3"
pytest-mock = "^3.11.1"
pytest-ruff = "^0.1"


[tool.poetry.group.devenv.dependencies]
mypy = "^1.4.1"
pre-commit = "^3.3.3"
mdformat = "^0.7.16"
mdformat-frontmatter = "^2.0.1"
mdformat-tables = "^0.4.1"
ruff = "^0.0.278"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
